@@ -24,6 +24,8 @@ linux (4.6-1~exp2) UNRELEASED; urgency=medium
   * linux-image: Add workaround for bug #817083 in debconf
   * linux-image: prerm: Allow removal of running kernel if we can't ask debconf
     questions (Closes: #825423)
+  * linux-image: prerm: Ignore version of running kernel inside a container or
+    chroot
 
   [ Aurelien Jarno ]
   * [mips64{,el}] Set CPU to MIPS64 R2.
